WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256440
REGRESSION (
251295@main
): -[WKWebInspectorUISaveController initWithSaveDatas:savePanel:] leaks an NSView
https://bugs.webkit.org/show_bug.cgi?id=256440
Summary
REGRESSION (251295@main): -[WKWebInspectorUISaveController initWithSaveDatas:...
David Kilzer (:ddkilzer)
Reported
2023-05-07 20:44:10 PDT
-[WKWebInspectorUISaveController initWithSaveDatas:savePanel:] leaks an NSView. Found by clang static analyzer. Regressed in: Web Inspector: replace the two "Export Audit" and "Export Result" buttons with a single button that has a picker in the `NSSavePanel`
https://bugs.webkit.org/show_bug.cgi?id=241214
<
rdar://problem/76775840
> <
https://commits.webkit.org/251295@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-07 20:44:39 PDT
<
rdar://problem/109023427
>
David Kilzer (:ddkilzer)
Comment 2
2023-05-07 20:48:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13561
EWS
Comment 3
2023-05-08 01:22:32 PDT
Committed
263787@main
(e6f69b44fce6): <
https://commits.webkit.org/263787@main
> Reviewed commits have been landed. Closing PR #13561 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug