REGRESSION (251295@main): -[WKWebInspectorUISaveController initWithSaveDatas:savePanel:] leaks an NSView https://bugs.webkit.org/show_bug.cgi?id=256440 <rdar://109023427>

Reviewed by Devin Rousso.

* Source/WebKit/UIProcess/Inspector/mac/WebInspectorUIProxyMac.mm:
(-[WKWebInspectorUISaveController initWithSaveDatas:savePanel:]):
- Use adoptNS().get() to fix the leak.

Canonical link: https://commits.webkit.org/263787@main